--- a/movie_watchlist/src/index.css
+++ b/movie_watchlist/src/index.css
@@ -9,8 +9,9 @@
 }
 
 body {
-  display: flex;
-  margin-left: 20px;
+  display: block;
+  margin: 0 auto;
+  width: 1200px;
 }
 
 h1 {
@@ -23,8 +24,9 @@ h1 {
   background-image: url("./assets/images/background.png");
   background-size: cover;
   background-position: center;
-  height: 200px;
-  width: 550px;
+  height: 300px;
+  width: 1050px;
+  margin-top: 20px;
 }
 
 .header-text {
@@ -43,7 +45,7 @@ h1 {
 
 .header-text p {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 24px;
   margin-top: 20px;
 }
 
@@ -55,22 +57,31 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
-  top: -20px;
+  top: 6  0px;
+  /* visibility: hidden; */
 }
 
 .searchbar-input {
-  padding: 5px;
+  padding: 10px;
   border: none;
-  width: 350px;
-  height: 30px;
+  width: 700px;
+  height: 50px;
   border-radius: 5px 0px 0px 5px;
   background-color: #2E2E2F;
+  font-size: 20px;
 }
+
+.searchbar-input::placeholder{
+  font-size: 20px;
+  opacity: 50%;
+  color: #9CA3AF;
+}
+
 
 .searchbar-button {
   padding: 15px;
   width: 100px;
-  height: 40px;
+  height: 70px;
   border-radius: 0px 5px 5px 0px;
   background-color: #4B4B4B;
   border: none;
@@ -94,4 +105,76 @@ h1 {
 
 .searchbar-input:focus{
   outline: none;
+}
+
+/* CARD */
+
+.card {
+  margin-top: 100px;
+  margin-left: 40px;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  margin-bottom: 60px;
+  width: 900px;
+}
+
+.card-content {
+  display: block;
+}
+
+.card-img {
+  width: 200px;
+  height: 250px;
+  float: left;
+  margin-right: 30px;
+}
+
+.card-info, .card-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  line-height: 0px;
+}
+
+.card-title {
+  font-weight: 700;
+  font-size: 30px;
+  margin-right: 10px;
+}
+
+.star-icon {
+  color: yellow;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+}
+
+.card-stars {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.card-details {
+  line-height: 20px;
+}
+
+.card-min, .card-genre {
+  font-weight: 400;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.card-summary {
+  font-size: 25px;
+  color: #A5A5A5;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.border-line {
+  border: 1.5px solid #E5E7EB;
+  margin-bottom: 50px;
+  width: 900px;
+  margin-left: 40px;
 }
